[package]
name = "rust_ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
paste = "1.0.14"
once_cell = "1.18.0"
winit = "0.28"
wgpu = "0.17"
pollster = "0.3"
image = { version = "0.24", default-features = false, features = ["png"] }
rusttype = "0.9.3"